force-app/main/default/objects/Similarity_Key_Setting__c/Similarity_Key_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Similarity Key Setting</label>
</CustomObject>