force-app/main/default/objects/Similarity_Key_Setting__c/fields/Env_Mode__c.field-meta.xml
<CustomField>
    <fullName>Env_Mode__c</fullName>
    <defaultValue>&quot;Production&quot;</defaultValue>
    <description>Only populate this field if you know the consequences of this.</description>
    <label>Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>