force-app/main/default/objects/Similarity_Key_Setting__c/fields/Size_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Size_Opportunity__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Size Opportunity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>